# PAA_Trab1

./: CMakeLists.txt  README.md
Implementacao/Headers/: KnapSack.h  MatrizNormal.h  MatrizStrassen.h  Menu.h  TesteKnapSack.h  TesteMatrizNormal.h  TesteMatrizStrassen.h  load.h
Implementacao/Source/: KnapSack.c  MatrizNormal.c  Menu.c  TesteKnapSack.c  TesteMatrizNormal.c  TesteMatrizStrassen.c  load.c
Proj/: Proj.cpp  Proj.sln  Proj.vcxproj  Proj.vcxproj.filters
